--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <img
       src="https://www.istockphoto.com/photo/eastern-bluebirds-male-and-female-gm183412466-15489839"
-      alt="birdies"
-    />
+      alt="birdies">
+  
     <p>
       Bitcoin halving lots of hash of many faucet! Zilliqa could be a
       turing-complete after some difficulty! Bitcoin Cash formed a trusted
